# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  28 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-chroot.sh, targets/support/chroot-functions.sh,
  targets/support/kmerge.sh:
  Fixing echo/sed for make.conf writing.

  28 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/grp/grp-chroot.sh, targets/stage1/stage1-chroot.sh,
  targets/support/kmerge.sh, targets/support/livecdfs-update.sh:
  Rather than using the environment, we write out our USE to make.conf, then
  remove it once we're done. We don't bother adding clst_HOSTUSE, since it'll
  be written to make.conf, already.

  28 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/embedded/embedded-chroot.sh, targets/grp/grp-chroot.sh,
  targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/netboot/netboot-chroot.sh, targets/netboot/netboot-combine.sh,
  targets/netboot2/netboot2-pkg.sh, targets/stage1/stage1-chroot.sh,
  targets/stage2/stage2-preclean-chroot.sh, targets/stage3/stage3-chroot.sh,
  targets/stage3/stage3-preclean-chroot.sh, targets/stage4/stage4-chroot.sh,
  targets/support/chroot-functions.sh, targets/support/pre-kmerge.sh,
  targets/support/unmerge.sh, targets/tinderbox/tinderbox-chroot.sh:
  Changing run_emerge to run_merge, changing both setup_portage and
  setup_myfeatures to add any USE changes to make.conf prior to merge, then
  removing the settings added, rather than (ab)using the environment.

  28 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/grp/grp-chroot.sh, targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/stage1/stage1-chroot.sh, targets/stage3/stage3-chroot.sh,
  targets/stage4/stage4-chroot.sh, targets/support/chroot-functions.sh,
  targets/tinderbox/tinderbox-chroot.sh:
  Rearrange some of the functions in chroot-functions.sh in preparation for
  some upcoming changes and rename setup_portage to setup_pkgmgr.

  28 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>