@@ -28,7 +28,7 @@ run_merge "--oneshot --nodeps virtual/baselayout"
 sed -i '/USE="${USE} -build"/d' /etc/make.conf
 
 [ -e /etc/make.conf ] && \
-	echo 'USE="-* bindist build ${STAGE1_USE} ${HOSTUSE}"' >> /etc/make.conf
+	echo "USE=\"-* bindist build ${STAGE1_USE} ${HOSTUSE}\"" >> /etc/make.conf
 run_merge "--noreplace --oneshot --newuse ${clst_buildpkgs}"
 sed -i '/USE="-* bindist build ${STAGE1_USE} ${HOSTUSE}"/d' \
 	/etc/make.conf
