@@ -184,8 +184,8 @@ then
 	fi
 fi
 
-[ -e /etc/make.conf ] && echo 'USE="${USE} ${clst_kernel_use} symlink build"' \
-	>> /etc/make.conf
+[ -e /etc/make.conf ] && \
+	echo \"USE="${USE} ${clst_kernel_use} symlink build\"" >> /etc/make.conf
 
 if [ -n "${clst_KERNCACHE}" ]
 then
